# cli

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  go_repositories.bzl  proto_repositories.bzl  rules_proto_config.yaml
.github/workflows/: release.yaml
cmd/istream/: BUILD.bazel  main.go
mocks/: AuthServiceClient.go  BUILD.bazel  InputsClient.go  UsersClient.go
pkg/cmd/input/: BUILD.bazel  root.go
pkg/cmd/input/create/: BUILD.bazel  create.go  create_test.go
pkg/cmd/input/get/: BUILD.bazel  get.go  get_test.go
pkg/cmd/input/list/: BUILD.bazel  list.go  list_test.go
pkg/cmd/login/: BUILD.bazel  root.go
pkg/cmd/root/: BUILD.bazel  root.go
pkg/config/: BUILD.bazel  config.go
pkg/debounce/: BUILD.bazel  debounce_test.go
pkg/fswatcher/: BUILD.bazel  factory_darwin.go  factory_fsnotify.go
pkg/fswatcher/common/: BUILD
pkg/fswatcher/fsevents/: BUILD.bazel  fsevents.go
pkg/fswatcher/fsnotify/: BUILD.bazel  fsnotify.go
pkg/protobuf/: BUILD.bazel  io.go
pkg/test/: BUILD.bazel  helpers.go
pkg/version/: BUILD.bazel  version.go
stream/input/v1beta1/: BUILD.bazel  inputs.pb.go  inputs.proto  inputs_grpc.pb.go  users.pb.go  users.proto  users_grpc.pb.go
