load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "AuthServiceClient.go",
        "InputsClient.go",
        "UsersClient.go",
    ],
    importpath = "github.com/input-stream/cli/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/auth/v1beta1",
        "//build/stack/inputstream/v1beta1",
        "@com_github_stretchr_testify//mock",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
