load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "debounce",
    srcs = ["debounce.go"],
    importpath = "github.com/input-stream/cli/pkg/debounce",
    visibility = ["//visibility:public"],
)

go_test(
    name = "debounce_test",
    srcs = ["debounce_test.go"],
    deps = [":debounce"],
)
