load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "login",
    srcs = ["root.go"],
    importpath = "github.com/input-stream/cli/pkg/cmd/login",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "@com_github_spf13_cobra//:cobra",
    ],
)
