load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "login",
    srcs = ["root.go"],
    importpath = "github.com/input-stream/cli/pkg/cmd/login",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/auth/v1beta1",
        "//pkg/config",
        "@com_github_skratchdot_open_golang//open",
        "@com_github_spf13_cobra//:cobra",
    ],
)
