load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "create",
    srcs = ["create.go"],
    importpath = "github.com/input-stream/cli/pkg/cmd/input/create",
    visibility = ["//visibility:public"],
    deps = [
        "//build/stack/inputstream/v1beta1",
        "//pkg/config",
        "//pkg/protobuf",
        "@com_github_makenowjust_heredoc//:heredoc",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_test(
    name = "create_test",
    srcs = ["create_test.go"],
    embed = [":create"],
    deps = [
        "//build/stack/inputstream/v1beta1",
        "//mocks",
        "//pkg/test",
        "@com_github_google_go_cmp//cmp",
        "@com_github_makenowjust_heredoc//:heredoc",
        "@com_github_stretchr_testify//mock",
    ],
)
